# sunrei-server/src/main/kotlin/com/sunrei/service/SunreiSpotService.kt
@@ -27,6 +27,7 @@ class SunreiSpotService {
                         address = row[Places.address],
                         latitude = row[Places.latitude],
                         longitude = row[Places.longitude],
+                        googleMapsId = row[Places.googleMapsId],
                         isClosed = row[Places.isClosed],
                         closedReason = row[Places.closedReason],
                         closedAt = row[Places.closedAt],
@@ -58,6 +59,7 @@ class SunreiSpotService {
                             address = row[Places.address],
                             latitude = row[Places.latitude],
                             longitude = row[Places.longitude],
+                            googleMapsId = row[Places.googleMapsId],
                             isClosed = row[Places.isClosed],
                             closedReason = row[Places.closedReason],
                             closedAt = row[Places.closedAt],
